fix contact input wrap

--- a/contacts.css
+++ b/contacts.css
@@ -12,15 +12,17 @@
     overflow:hidden;
 }
 
-.img-thumb {
-    padding-top: 8px;
-    padding-left: 8px;
+.img-attr-thumb {
+    position: relative;
+    top: 8px;
+    left: 8px;
     max-height: 30px;
-    float: left;
 }
 
-.img-circle {
-    max-width: 100px;
+.img-attr {
+    max-height: 150px;
+    position: relative;
+    top: 0.5em;
 }
 
 .img-wrap {
@@ -33,6 +35,9 @@
 }
 .user-row {
     margin-bottom: 4px;
+}
+
+.user-row-wrap {
 }
 
 .user-row:last-child {
